@@ -1,3 +1,3 @@
 SUBDIRS = m4macros src tests
-
+EXTRA_DIST = bootstrap
 bin_SCRIPTS=glimmer-config
